# base64-turbo

./: Cargo.toml  README.md
.github/workflows/: miri.yml  release.yml  tests.yml  verification.yml
benches/: encoding_bench.rs
docs/: README.md  design.md  ecosystem_comparison.md  faq.md  verification.md
docs/benchmarks/: README.md  amd_epyc_genoa.md  intel_i7_scalar.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_all_modes.rs  fuzz_large_inputs.rs
src/: lib.rs  scalar.rs
src/simd/: avx2.rs  avx512.rs  mod.rs  sse4.rs  ssse3.rs
tests/: test-allocation.rs  test-classic.rs
