[package]
name = "base64-turbo"
version = "0.1.1"
edition = "2024"

[features]
default = ["std", "simd"]
std = []
simd = ["std"]
avx512 = ["std", "simd"]
parallel = ["std", "dep:rayon"]

[dependencies]
rayon = { version = "1.8", optional = true }

[dev-dependencies]
rand = "0.9"
criterion = { version = "0.7", features = ["html_reports"] }
base64 = "0.22"
base64-simd = "0.8"
base64-turbo = { path = "." }

[[bench]]
name = "encoding_bench"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true 

[profile.bench]
opt-level = 3
lto = "fat"
codegen-units = 1
