[package]
name = "base64-turbo"
version = "0.1.1"
edition = "2024"
description = "Fastest pure Rust Base64 encoder/decoder with AVX2/AVX512 and fallback for no_std."
license = "MIT"
repository = "https://github.com/hacer-bark/base64-turbo"
homepage = "https://github.com/hacer-bark/base64-turbo"
documentation = "https://docs.rs/base64-turbo"
readme = "README.md"
authors = ["Hacer"]
keywords = ["base64", "simd", "avx512", "performance", "encoding"]
categories = ["encoding", "no-std", "web-programming"]
exclude = [
    ".github",
    ".gitignore",
    "benches/results/*"
]

[features]
default = ["std", "simd"]
std = []
simd = ["std"]
avx512 = ["std", "simd"]
parallel = ["std", "dep:rayon"]

[dependencies]
rayon = { version = "1.8", optional = true }

[dev-dependencies]
rand = "0.9"
criterion = { version = "0.7", features = ["html_reports"] }
base64 = "0.22"
base64-simd = "0.8"
base64-turbo = { path = "." }

[[bench]]
name = "encoding_bench"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true 

[profile.bench]
opt-level = 3
lto = "fat"
codegen-units = 1
