[package]
name = "base64-turbo"
version = "0.1.4"
edition = "2024"
rust-version = "1.89"
description = "The fastest memory-safe Base64 engine. Formally verified (Kani/MIRI). Features runtime AVX2/AVX512 detection, zero-allocation API, and robust no_std support."
license = "MIT OR Apache-2.0"
repository = "https://github.com/hacer-bark/base64-turbo"
documentation = "https://docs.rs/base64-turbo"
readme = "README.md"
authors = ["Hacer"]
keywords = ["base64", "simd", "avx512", "performance", "encoding"]
categories = ["encoding", "hardware-support", "no-std", "web-programming"]
exclude = [
    ".github",
    ".gitignore",
    "benches/results/*",
    "benches/img/*",
    "docs/*",
]

[features]
default = ["std", "simd"]
unstable = []
std = []
simd = ["std"]

[dev-dependencies]
rand = "0.9"
criterion = { version = "0.7", features = ["html_reports"] }
base64 = "0.22"
base64-simd = "0.8"
base64-turbo = { path = "." }

[[bench]]
name = "encoding_bench"
harness = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true 

[profile.bench]
opt-level = 3
lto = "fat"
codegen-units = 1
